# kraft-mortgages

./: .env.example  .env.local.example  .gitignore  .mcp.json  .prettierignore  .prettierrc.json  AI_ASSISTANT_IMPLEMENTATION_CHECKLIST.md  AI_CONTEXT_LOG.md  API  CLAUDE.md  CRUSH.md  IMPLEMENTATION_PROGRESS.md  MARBLISM-PROMPT-BIBLE.md  PRD  README.md  blog-post-beyond-big-banks.md  blog-post-firestore-data.json  blog-post-html-format.html  firebase.json  firestore.rules  first-blog-post-content.md  first-blog-post-firestore.json  first-blog-post-html.html  next.config.js  package-lock.json  package.json  package.json.txt  pnpm-lock.yaml  pnpm-workspace.yaml  postiz-config.md  setup-vercel-env.md  storage.rules  tailwind.config.js  tailwind.config.ts.txt  test-api.ps1  vercel.json
.claude/: playwright-mcp-fix.md  settings.local.json
.claude/plans/: facebook-marketing-pipeline.md
.github/workflows/: ci.yml
.next/: trace
.vercel/: project.json
apps/fastapi/: pyproject.toml
apps/fastapi/src/: main.py
apps/fastapi/src/services/: documents.py  embeddings.py  lead_scoring.py  ocr.py  rates.py  s3store.py
apps/fastapi/src/services/lenders/: aggregate.py  base.py  mock_json.py
apps/fastapi/src/workers/: agents.py
apps/web/: .env.example  .npmrc  build-log.txt  (+7 more)
design-reference/: Kraft Redesign.html
docs/: firestore-schema.md
functions/: .gitignore  package.json
infra/: docker-compose.yml
mli-select-complete/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
scripts/: add-pdf-modal.cjs  fix-pdf-modal-6.cjs  remove-nav-footer.mjs
(+600 files in other folders)
