[project]
name = "kraft-backend"
version = "0.1.0"
description = "FastAPI backend for Kraft Mortgages"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=4.2.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "boto3>=1.34",
  "python-multipart>=0.0.9",
  "requests>=2.32"
]

[tool.uvicorn]
factory = true
